<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_record3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jwan2_sizebook.editRecordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/neck_label"
        android:layout_alignBaseline="@+id/neckText"
        android:layout_alignBottom="@+id/neckText"
        android:layout_alignParentStart="true"
        android:text="@string/neck"
        android:clickable="false"
        style="?attr/autoCompleteTextViewStyle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/chestText"
        android:hint="@string/number_format"
        android:gravity="center"
        android:layout_below="@+id/bustText"
        android:layout_alignStart="@+id/bustText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_format"
        android:id="@+id/dateText"
        android:inputType="date"
        android:layout_below="@+id/NameText"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/waistText"
        android:hint="@string/number_format"
        android:gravity="center"
        android:layout_below="@+id/chestText"
        android:layout_alignStart="@+id/chestText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:hint="@string/name"
        android:id="@+id/NameText"
        android:inputType="textCapWords|textPersonName"
        android:maxLines="1"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/label1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/hipText"
        android:hint="@string/number_format"
        android:gravity="center"
        android:layout_below="@+id/waistText"
        android:layout_alignStart="@+id/waistText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inseamText"
        android:hint="@string/number_format"
        android:gravity="center"
        android:layout_below="@+id/hipText"
        android:layout_alignStart="@+id/hipText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/bustText"
        android:hint="@string/number_format"
        android:gravity="center"
        android:layout_below="@+id/neckText"
        android:layout_alignStart="@+id/neckText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/neckText"
        android:hint="@string/number_format"
        android:gravity="center"
        android:layout_below="@+id/dateText"
        android:layout_toEndOf="@+id/bust_size"
        android:layout_marginStart="11dp" />

    <Button
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_buttom"
        android:onClick="homeScreen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/commentText"
        android:hint="@string/comments"
        android:maxLines="2"
        android:layout_below="@+id/inseamText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp" />

    <EditText
        android:inputType="none"
        android:ems="10"
        android:text="@string/ask_for_date"
        android:clickable="false"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:labelFor="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label1"
        tools:ignore="LabelFor"
        android:editable="false"
        android:layout_above="@+id/neckText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bust_size"
        android:layout_alignBaseline="@+id/bustText"
        android:layout_alignBottom="@+id/bustText"
        android:layout_alignParentStart="true"
        android:text="@string/bust"
        style="?attr/autoCompleteTextViewStyle" />

    <TextView
        android:text="@string/chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chest_label"
        android:layout_alignBaseline="@+id/chestText"
        android:layout_alignBottom="@+id/chestText"
        android:layout_alignParentStart="true"
        style="?attr/autoCompleteTextViewStyle" />

    <TextView
        android:text="@string/inseam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inseam_label"
        android:layout_alignBaseline="@+id/inseamText"
        android:layout_alignBottom="@+id/inseamText"
        android:layout_alignParentStart="true"
        style="?attr/autoCompleteTextViewStyle" />

    <TextView
        android:text="@string/waist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waist_label"
        style="?attr/autoCompleteTextViewStyle"
        android:layout_below="@+id/chest_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/hip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hip_label"
        android:layout_alignBaseline="@+id/hipText"
        android:layout_alignBottom="@+id/hipText"
        android:layout_alignParentStart="true"
        style="?attr/autoCompleteTextViewStyle" />

</RelativeLayout>
